# airevtool

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
scripts/: build-plugin.ps1
src/main/: index.ts  lmstudio-client.ts  report-file-service.ts  x64dbg-bridge.ts
src/main/agents/: disasm-agent.ts  memory-agent.ts  module-utils.ts  orchestrator.ts  report-agent.ts  vuln-agent.ts
src/main/db/: database.ts
src/main/rag/: embedding-client.ts  rag-manager.ts  vector-store.ts
src/preload/: index.ts
src/renderer/: App.tsx
src/renderer/components/: AgentDashboard.tsx  ChatPanel.tsx  DisasmView.tsx  FindingsPanel.tsx  LogPanel.tsx  MemoryView.tsx  RegistersView.tsx  SettingsPanel.tsx  StatusBar.tsx  Toolbar.tsx
src/renderer/styles/: app.css  global.css
src/shared/: types.ts
x64dbg-plugin/: CMakeLists.txt  x64bridge.def  x64dbg.def
x64dbg-plugin/src/: command_handler.cpp  command_handler.h  plugin.cpp  pluginmain.h  websocket_server.cpp  websocket_server.h
